--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
+    "@vercel/speed-insights": "^1.1.0",
     "date-fns": "^4.1.0",
     "ethers": "^5.7.2",
     "framer-motion": "^11.0.8",
